--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,11 @@ body {
     background-color: aquamarine;
 }
 
-.sidebar-container {
+body {
+    overflow: hidden;
+}
+
+#sidebar-container {
     background-color: aquamarine;
     min-height: 100vh;
 }
