--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,109 @@ img{
     margin: 15px;
     border-radius: 50%;
     border: 4px solid black;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+  
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 70%;
+    max-width: 600px;
+}
+  
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 70%;
+    max-width: 600px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+  
+  /* Add Animation */
+.modal-content, #caption {  
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+  
+@keyframes zoom {
+    from {transform: scale(0.1)} 
+    to {transform: scale(1)}
+}
+  
+  /* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+  
+.close:hover, .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+  
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+      width: 100%;
+    }
+}
+
+.row{
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-right: 0 px !important;
 }
 
 #max{
     min-height: 100vh;
 }
 
+.accordion-button{
+    background-color: #7191c1 !important;
+    border-radius: 4px !important;
+}
+
+.accordion-body{
+    background-color: #d6dfed;
+}
+
 #barra {
     position: relative;
+}
+
+.centrar{
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .col-4 {
@@ -20,6 +115,8 @@ img{
 
 .col {
     background-color: #D9E6FF;
+    justify-content: center;
+    align-content: center;
 }
 
 .container {
@@ -40,6 +137,15 @@ img{
     align-items: center;
 }
 
+.panel_lateral2{
+    display: flex;
+    flex-direction: column;
+    height: 15px;
+    width: 100%;
+    justify-content: start;
+    align-items: center;
+}
+
 .separador{
     width: 60%;
     height: 3px;
@@ -52,8 +158,19 @@ img{
     font-size: medium;
     font-style: italic;
 }
+
 p {
     margin-bottom: 0px !important;
     padding: 0 0 0 0px;
     font-style: italic;
+}
+
+#col_der{
+    height: 10px;
+}
+
+.texto{
+    margin: auto;
+
+    width: 80%;
 }
